--- a/style/style.css
+++ b/style/style.css
@@ -24,3 +24,7 @@ button[type=submit] {
 button[type=submit]:hover {
   background-color: #45a049;
 }
+
+#MainMenu {visibility: hidden;}
+footer {visibility: hidden;}
+header {visibility: hidden;}
